fixed scrollbars on low-resolution desktop screens

--- a/edgie/styles/globals.css
+++ b/edgie/styles/globals.css
@@ -27,11 +27,7 @@ body {
   width: 100%;
   /*https://www.hostinger.com/tutorials/best-html-web-fonts*/
   font-family: var(--sans);
-  font-size: clamp(
-    calc(calc(100vh + 100vw) / 125),
-    1.75rem,
-    calc(calc(100vh + 100vw) / 50)
-  );
+  font-size: clamp(min(2vh, 4vw), 1.75rem, min(3vh, 6vw));
   font-weight: 300;
   line-height: 1.6;
   color: var(--text);
